--- a/package.json
+++ b/package.json
@@ -6,16 +6,24 @@
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
+    "@types/jest": "^28.1.3",
+    "@types/node": "^18.0.0",
+    "@types/react": "^18.0.14",
+    "@types/react-dom": "^18.0.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-scripts": "5.0.1",
+    "react-scripts": "^5.0.1",
+    "serve": "^13.0.2",
+    "typescript": "^4.7.4",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "start": "craco start",
+    "build": "craco build",
+    "test": "craco test",
+    "eject": "react-scripts eject",
+    "esbuild": "node src/scripts/esbuild.js",
+    "esbuild-start": "node src/scripts/esbuild-start.mjs"
   },
   "eslintConfig": {
     "extends": [
@@ -34,5 +42,15 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@craco/craco": "^6.4.4",
+    "craco-esbuild": "^0.5.1",
+    "esbuild": "^0.14.47",
+    "esbuild-plugin-sass": "^1.0.1",
+    "esbuild-plugin-svg": "^0.1.0",
+    "esbuild-plugin-svgj": "^1.0.3",
+    "esbuild-plugin-svgr": "^1.0.1",
+    "nodemon": "^2.0.18"
   }
 }
