--- a/.gitignore
+++ b/.gitignore
@@ -5,6 +5,10 @@
 /.pnp
 .pnp.js
 
+# development
+/web/*
+!/web/index.html
+
 # testing
 /coverage
 
@@ -12,6 +16,7 @@
 /build
 /dist/*
 !/dist/index.html
+
 
 # misc
 .DS_Store
@@ -23,3 +28,5 @@
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+
+/tmp
